fix options stuff i think
