# api/swagger.yaml
@@ -80,6 +80,20 @@ paths:
           description: "Languages succesfully created"
       x-swagger-router-controller: "Default"
   /programs:
+    options:
+      operationId: "programsOPTIONS"
+      parameters: []
+      responses:
+        200:
+          description: "200 response"
+          headers:
+            Access-Control-Allow-Origin:
+              type: "string"
+            Access-Control-Allow-Methods:
+              type: "string"
+            Access-Control-Allow-Headers:
+              type: "string"
+      x-swagger-router-controller: "Default"
     get:
       description: "Get programs"
       operationId: "findPrograms"
